[gd_scene load_steps=3 format=3 uid="uid://cip2isygbs5ks"]

[ext_resource type="Script" path="res://game/skill_display.gd" id="1_ky1nb"]
[ext_resource type="FontFile" uid="uid://tjvbjneifeu1" path="res://assets/fonts/pixel-font-virtue-assets/ttf/virtue_large.ttf" id="2_t7e66"]

[node name="SkillDisplay" type="VBoxContainer"]
theme_override_constants/separation = 4
script = ExtResource("1_ky1nb")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t7e66")
text = "Name"

[node name="DescLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(0.66, 0.66, 0.66, 1)
layout_mode = 2
text = "Description"
